# aristos-council

./: .gitignore  CLAUDE.md  README.md  acceptance_check.py  app.py  baustellen_spike.py  ko_fcf_probe.py  pyproject.toml  start_aristos.bat  technical.py  test_technical.py  yfinance_adapter.py
.github/workflows/: ci.yml  claude.yml
.streamlit/: config.toml
acceptance_out/: t3_KO.txt  t4_MU.txt  t5_GS.txt  t6_PARA.txt  t8_AMZN_raw.txt
data/: etf_static.csv
docs/: CALCULATIONS.md  COUNCIL_EXPLAINER.md  REPORT_MARKS.md  SCOREBOARD.md  spec_diagrams_v2.md  spec_universe_run_tab.md
docs/incomings/: CALCULATIONS.md  EXPLAINER_partA_replacement.md  README_new.md  portfolio_cards_rewrite.md
examples/: backtest.py  company_check.py  etf_baselines.py  etf_coverage_probe.py  rank_factors.py  rank_screen.py  run_council.py  run_council_n.py  run_pipeline.py  score_snapshot.py  snapshot_consensus.py
reports/000660.KS/: 2026-06-16T15-56-11Z.json  2026-06-21T13-12-24Z.json
reports/ARM/: 2026-06-17T13-12-47Z.json  2026-06-17T13-17-31Z.json
reports/ASML/: 2026-06-17T12-26-02Z.json  2026-06-17T12-36-41Z.json  2026-06-17T12-41-52Z.json
scripts/: check_ev_fields.py  generate_etf_static_rows.py
snapshots/: verdict_consensus.csv
strategies/: conservative_plus_v1.yaml  conservative_screen_v1.yaml  dividend_aristocrats_v1.yaml  dividend_aristocrats_v2.yaml  etf_core_v1.yaml  etf_dividend_v1.yaml  etf_growth_v1.yaml  financials_v1.yaml  growth_garp_v1.yaml  growth_garp_v2.yaml  growth_screen_v1.yaml  growth_screen_v2.yaml  growth_v1.yaml  magic_formula_momentum_v1.yaml  magic_formula_raw_v1.yaml  magic_formula_v1.yaml  magic_value_screen_v1.yaml
tests/: test_app.py  test_asset_kind_gate.py  test_backtest.py  test_borderline.py  test_cache_schema.py  test_cli_guards.py  test_company_check.py  test_company_name.py  test_conservative_plus.py  test_contested.py  test_council_graph.py  test_coverage.py  test_criteria_registry.py  test_currency_ev.py  test_data_cache.py  test_decision_harness.py  test_decision_matrix.py  test_defensive_risk.py  test_demo_surface.py  test_discovery.py  test_disposition.py  test_divergence_flag.py  test_dividend_yield_units.py  test_download_names.py  test_earnings_yield_ev.py  test_eodhd_adapter.py  test_etf_baselines_mirror.py  test_etf_core.py  test_etf_coverage_probe.py  test_etf_lenses.py  test_etf_static.py  test_etf_universes.py  test_evidence.py  test_export_pdf.py  test_factor_integrity.py  test_financials_factors.py  test_financials_gate.py  test_freeze_wiring.py  test_generate_etf_static_rows.py  test_growth_garp_v2.py  (+44 more)
universes/: defensive_16_v1.yaml  defensive_income_16_v1.yaml  energy_watch_v1.yaml  etf_core_ucits_v1.yaml  etf_dividend_ucits_v1.yaml  etf_dividend_us_v1.yaml  etf_growth_ucits_v1.yaml  etf_growth_us_v1.yaml  financials_16_v1.yaml  growth_40_v1.yaml
verdicts/: 000660.KS..json  000660.KS.json  ARM.json  ASML.json  BRK-B.json  JNJ.json  KO.json  MO.json  MSFT.json  NVDA.json  PG.json  RHM.DE.json  T.json
(+84 files in other folders)
