[project]
name = "aristos-council"
version = "0.1.0"
description = "A multi-agent financial research analyst — specialists deliberate, a critic dissents, a human holds the veto."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "langgraph>=0.2",
]

[project.optional-dependencies]
# Dev-time market data provider (Phase 1). Kept optional so unit tests run
# without network access or the yfinance dependency installed.
yfinance = ["yfinance>=0.2.40"]
# Real LLM runs (tiered models). Tests do NOT need this.
llm = ["langchain>=0.3", "langchain-anthropic>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
