[project]
name = "aristos-council"
version = "0.1.0"
description = "A multi-agent financial research analyst — specialists deliberate, a critic dissents, a human holds the veto."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "langgraph>=0.2",
    # Anthropic provider integration for init_chat_model. A hard dependency so
    # cold-start Colab runtimes always have it — a base install left it missing
    # and the live run died inside init_chat_model. Tests never import it (the
    # runner imports lazily and tests inject FakeRunners), so this costs the
    # test suite nothing but the install footprint.
    "langchain-anthropic>=0.3",
]

[project.optional-dependencies]
# Dev-time market data provider (Phase 1). Kept optional so unit tests run
# without network access or the yfinance dependency installed.
yfinance = ["yfinance>=0.2.40"]
# The LangChain framework half of real LLM runs (langchain.chat_models.
# init_chat_model). The Anthropic provider integration is a hard dependency
# above. Tests do NOT need this.
llm = ["langchain>=0.3"]
# Council Station — the local Streamlit UI (app.py). Browsing past runs needs
# only this group; LAUNCHING a council additionally needs ".[yfinance,llm]"
# (and the runtime API keys), so the full install is ".[ui,yfinance,llm]".
ui = [
    "streamlit>=1.30",
    "python-dotenv>=1.0",
    # IANA tz database for zoneinfo — Windows has no system tz source, and the
    # UI converts UTC timestamps to Europe/Berlin for display.
    "tzdata",
    # "Export PDF" — purpose-built A4 council record via HTML-to-PDF (pure
    # Python, installs cleanly on Windows) + markdown -> HTML for agent prose.
    "xhtml2pdf>=0.2.16",
    "markdown>=3.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
